# DoomSpeedrunRL

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
doomspeedrunrl/doom_rl/reinforcement_learning/: requirements.txt
doomspeedrunrl/doom_rl/reinforcement_learning/algorithms/: base_classes.py
doomspeedrunrl/doom_rl/reinforcement_learning/algorithms/a2c/: agents.py
doomspeedrunrl/doom_rl/reinforcement_learning/algorithms/ddpg/: agents.py  loss.py
doomspeedrunrl/doom_rl/reinforcement_learning/algorithms/dqn/: agents.py  loss.py
doomspeedrunrl/doom_rl/reinforcement_learning/architectures/: basic.py  discrete.py
doomspeedrunrl/doom_rl/reinforcement_learning/benchmarking/: base_classes.py  reward_curve.py  specialized_curves.py
doomspeedrunrl/examples/custom/ddpg/: bipedal_walker.py
doomspeedrunrl/examples/custom/dqn/: acrobot.py  cartpole.py
reinforcement_learning/algorithms/: base_classes.py
reinforcement_learning/algorithms/dqn/: agents.py  loss.py
src/examples/custom/ddpg/: bipedal_walker.py
src/examples/custom/dqn/: acrobot.py  cartpole.py
src/examples/stable_baselines3/dqn/: cartpole.py
src/rl_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/rl_package/reinforcement_learning/algorithms/: base_classes.py
src/rl_package/reinforcement_learning/architectures/: continuous.py
src/rl_package/reinforcement_learning/benchmarking/: specialized_curves.py
src/rl_package/rl_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/rl_package/utils/: arrays.py  helpers.py
(+8 files in other folders)
